--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "vue-bulma-tabs": "1.0.0",
     "vue-bulma-tooltip": "1.0.0",
     "vue-cleave": "1.0.0",
+    "vue-loading": "^0.1.4",
     "vue-peity": "0.3.0",
     "vue-resource": "0.9.3",
     "vue-router": "0.7.13",
+    "vue-truncate": "^1.0.0",
     "vuex": "1.0.0-rc.2"
   },
   "devDependencies": {
