--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "material-design-icons": "2.2.3",
     "moment": "2.13.0",
     "nprogress": "0.2.0",
+    "numeral": "^1.5.3",
     "plotly.js": "1.15.x",
     "vue": "1.0.26",
     "vue-bulma-breadcrumb": "1.0.0",
